--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,52 @@
-torch>=2.0.0
-torchtext>=0.15.0
-transformers>=4.30.0
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-tqdm>=4.65.0
-nltk>=3.8.0
-spacy>=3.6.0
-datasets>=2.13.0
-wandb>=0.15.0
-pyyaml>=6.0.0
-tensorboard>=2.13.0
-python-levenshtein>=0.21.0
-jupyter>=1.0.0
+# Mental Health Classifier - Requirements
+# Production-ready dependencies for 4-class model
+
+# Core ML/NLP
+torch>=1.9.0
+torchtext>=0.10.0
+transformers>=4.0.0
+scikit-learn>=1.0.0
+
+# Data Processing
+pandas>=1.3.0
+numpy>=1.21.0
+
+# Visualization (for confusion matrices and plots)
+matplotlib>=3.4.0
+seaborn>=0.11.0
+
+# Progress Bars
+tqdm>=4.62.0
+
+# Text Processing
+nltk>=3.6.0
+
+# JSON/Serialization
+pickle5>=0.0.11; python_version < "3.8"
+
+# Utilities
+pathlib; python_version < "3.4"
+datetime
+collections
+json
+re
+sys
+os
+time
+warnings
+
+# Optional: Development tools
+pytest>=6.0.0  # For testing
+jupyter>=1.0.0  # For notebooks
+black>=21.0.0   # For code formatting
+flake8>=3.9.0   # For linting
+
+# Optional: Production deployment
+fastapi>=0.70.0     # For API server
+uvicorn>=0.15.0     # ASGI server
+gunicorn>=20.0.0    # WSGI server
+pydantic>=1.8.0     # Data validation
+
+# Optional: Monitoring
+wandb>=0.12.0       # Experiment tracking
+tensorboard>=2.7.0  # Logging
