--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-*.pt filter=lfs diff=lfs merge=lfs -text
-models/*.pkl filter=lfs diff=lfs merge=lfs -text
+models/best_model.pt filter=lfs diff=lfs merge=lfs -text
